Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-9870

Simultaneous adding/removal of a role from framework's roles and its suppressed roles crashes the master.

    XMLWordPrintableJSON

Details

    Description

      Calling UPDATE_FRAMEWORK with a new role added both to 'FrameworkInfo.roles` and `suppressed_roles` crashes the master.

      The first place which doesn't expect this is increasing a `suppressed` allocator metric:
      https://github.com/apache/mesos/blob/fe7be9701e92d863734621ae1a3d339bb8598044/src/master/allocator/mesos/hierarchical.cpp#L507
      [
      https://github.com/apache/mesos/blob/fe7be9701e92d863734621ae1a3d339bb8598044/src/master/allocator/mesos/metrics.cpp#L255]

      Probably there are other similar places.
      Adding a new role in a suppressed state via re-subscribing  should also trigger this bug - haven't checked it

      Attachments

        Issue Links

          Activity

            People

              asekretenko Andrei Sekretenko
              asekretenko Andrei Sekretenko
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: