Fixed bugs in updating framework roles in the allocator.

This patch replaces the largest part of the logic around
(un)suppressing framework roles in the 'updateFramework()'
method with calling 'suppressRoles()'/'unsuppressRoles()'.

This fixes bugs which are triggered by simulatneous updates of
framework's roles and its suppressed roles (see MESOS-9870), namely:
 - master crashes due to changing nonexistent role metrics
 - master crash due to activating removed frameworkSorter
 - spurious activation of a role added in suppressed state

Review: https://reviews.apache.org/r/70995/